node-docker-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-docker-api-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-docker-api-2
  template:
    metadata:
      labels:
        app: node-docker-api-2
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "node-docker-api-2"
        dapr.io/app-port: "4000"
    spec:
      containers:
      - name: node-docker-api-2
        image: thaihoangcfc/node-docker-b:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 4000
