ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: node-docker
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
        - pathType: Prefix  
          path: /
          backend:
            service:
              name: node-docker-api
              port:
                number: 3000
